--- a/chat.html
+++ b/chat.html
@@ -1,84 +1,86 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Draw World JC-2 - Chat</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/style-chat.css" />
-  </head>
-  <body class="chat-theme-anime">
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-dark bg-black px-3">
-      <span class="navbar-brand">🌓 Draw World JC-2 — Sala de Rol</span>
-      <span id="user-label" class="text-info"></span>
-    </nav>
 
-    <!-- LAYOUT PRINCIPAL -->
-    <div class="container py-4">
-      <div class="row g-3">
-        <!-- COLUMNA PRINCIPAL: CHAT -->
-        <div class="col-lg-9">
-          <div id="chat-box" class="chat-box mb-3"></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Draw World JC-2 — Sala de Rol</title>
+  <!-- OJO: nombre del archivo CSS sin "/" delante -->
+  <link rel="stylesheet" href="/style-chat.css" />
+</head>
 
-          <div class="d-flex gap-2">
-            <input
-              id="message-input"
-              type="text"
-              class="form-control"
-              placeholder="Escribe tu mensaje..."
-            />
-            <button id="send-btn" class="btn btn-primary">Enviar</button>
-          </div>
-        </div>
-
-        <!-- COLUMNA DERECHA: JUGADORES -->
-        <div class="col-lg-3">
-          <div class="players-card">
-            <div class="players-header">
-              <span>Jugadores en la luna</span>
-              <span id="players-count" class="badge bg-info">0</span>
-            </div>
-
-            <ul
-              id="players-list"
-              class="list-group list-group-flush players-list"
-            >
-              <!-- Aquí se inyectan los jugadores por JS -->
-            </ul>
-          </div>
-        </div>
+<body class="chat-body">
+  <!-- CABECERA -->
+  <header class="chat-header">
+    <div class="chat-header-left">
+      <div class="chat-logo">🌓</div>
+      <div>
+        <div class="chat-title">Draw World JC-2</div>
+        <div class="chat-subtitle">Sala de Rol · Luna de Cristal</div>
       </div>
     </div>
 
-    <!-- Modal Edición -->
-    <div class="modal fade" id="editModal" tabindex="-1">
-      <div class="modal-dialog">
-        <div class="modal-content bg-secondary text-light anime-modal">
-          <div class="modal-header">
-            <h5 class="modal-title">Editar Mensaje</h5>
-            <button
-              class="btn-close btn-close-white"
-              data-bs-dismiss="modal"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <textarea id="editText" class="form-control" rows="4"></textarea>
-          </div>
-          <div class="modal-footer">
-            <button class="btn btn-light" data-bs-dismiss="modal">
-              Cancelar
-            </button>
-            <button id="saveEditBtn" class="btn btn-success">Guardar</button>
-          </div>
+    <div class="chat-header-right">
+      <div class="chat-user-passport">
+        <div id="chat-user-avatar" class="chat-user-avatar"></div>
+        <div class="chat-user-info">
+          <div id="chat-user-name" class="chat-user-name">Viajero</div>
+          <div id="chat-user-tag" class="chat-user-tag">ID: DW-0000</div>
         </div>
       </div>
     </div>
+  </header>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/chat.js"></script>
-  </body>
+  <!-- LAYOUT PRINCIPAL -->
+  <main class="chat-shell">
+    <!-- COLUMNA PRINCIPAL: CHAT -->
+    <section class="chat-main">
+      <div id="chat-box" class="chat-box"></div>
+
+      <div id="typing-indicator" class="typing-indicator hidden">
+        <span class="typing-label">GM está escribiendo</span>
+        <span class="dot"></span><span class="dot"></span><span class="dot"></span>
+      </div>
+
+      <div class="chat-input-bar">
+        <textarea id="message-input" class="chat-input" rows="1"
+          placeholder="Escribe aquí para narrar, hablar o lanzar hechizos..."></textarea>
+        <button id="send-btn" class="btn primary">Enviar</button>
+      </div>
+    </section>
+
+    <!-- COLUMNA LATERAL: JUGADORES + LORE -->
+    <aside class="chat-side">
+      <div class="side-card">
+        <div class="side-card-header">
+          <span>Party actual</span>
+          <span id="players-count" class="badge-pill">0</span>
+        </div>
+        <ul id="players-list" class="players-list"></ul>
+      </div>
+
+      <div class="side-card">
+        <div class="side-card-header">
+          <span>Registro del Mundo</span>
+        </div>
+        <div id="lore-log" class="lore-log"></div>
+      </div>
+    </aside>
+  </main>
+
+  <!-- MODAL EDICIÓN -->
+  <div id="edit-modal-overlay" class="edit-modal-overlay">
+    <div class="edit-modal">
+      <h2 class="edit-modal-title">Editar mensaje</h2>
+      <textarea id="editText" class="edit-textarea"></textarea>
+      <div class="edit-modal-actions">
+        <button id="cancelEditBtn" class="btn ghost">Cancelar</button>
+        <button id="saveEditBtn" class="btn primary">Guardar</button>
+      </div>
+    </div>
+  </div>
+
+  <script src="js/chat.js"></script>
+</body>
+
 </html>
